# cloud-aws

./: .gitignore  Makefile  README.md  pyproject.toml  samconfig.toml  template.yaml
.github/workflows/: ci.yml
diagram/: architecture.mmd  sequence.mmd
docs/: api.md  architecture.md  data-model.md  runbook.md  security.md
examples/: postman_collection.json  sample-events.json
examples/curl/: admin_ping.sh  health.sh  ingest.sh  rollups.sh
scripts/: deploy.sh  get_token_instructions.md  run_local.sh  seed_local.py
src/vetra/: auth.py  config.py  ddb.py  errors.py  logging.py  validation.py
src/vetra/handlers/: admin_ping.py  get_rollups.py  health.py  ingest_event.py
src/vetra/models/: event_schema.json
tests/: test_health.py  test_ingest_event_transactional.py  test_rbac.py  test_rollups_query.py  test_validation.py
